# minimatic

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
docs/: 0-overview.m  DESIGN.md  ROADMAP.md  control-builtins.md  extending-the-language.md  roadmap.md
examples/: api.m  newton_sqrt.py  render.m  report.m  request_example.py
kernel/: expression.py  kernel.py  lang.py
minimatic/: __init__.py  example_usage.py  kernel.py
minimatic/builtin/: __init__.py  arithmetic.py  builtin.md  control.py  core.py  data.py  heads.py  io.py  scope.py  symbols.py
minimatic/builtins/: __init__.py  arithmetic.py  comparison.py  control.py  io.py  registry.py
minimatic/core/: __init__.py  atoms.py  attributes.py  base_element.py  evaluation.py  expression.py  properties.py  symbol.py
minimatic/eval/: __init__.py  context.py  evaluator.py  rules.py  transforms.py  values.py
minimatic/pattern/: __init__.py  bindings.py  blanks.py  matcher.py  structural.py
src/builtins/: __init__.py  arithmetic.py  registry.py
src/core/: __init__.py  atoms.py  attributes.py  expression.py  symbol.py
src/eval/: __init__.py  context.py  evaluator.py  rules.py  transforms.py  values.py
src/pattern/: __init__.py  bindings.py  blanks.py  matcher.py  structural.py
tests/: conftest.py
tests/test_builtins/: test_arithmetic.py  test_comparison.py  test_control.py  test_io.py  test_registry.py
tests/test_core/: test_atoms.py  test_attributes.py  test_expression.py  test_symbol.py
tests/test_eval/: test_context.py  test_evaluator.py  test_rules.py  test_transforms.py  (+1 more)
(+4 files in other folders)
