[project]
name = "minimatic"
version = "0.1.0"
description = " A minimal, yet complete, Wolfram Language-style symbolic language"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.4", "pyright>=1.1"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
include = ["src"]
